Fix timeline connector line overlapping right side of circles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -789,7 +789,7 @@ section {
   padding-bottom: 2rem;
   border-left: 2px solid var(--border-color);
   padding-left: 2rem;
-  margin-left: -37px;
+  margin-left: -31px;
 }
 
 .timeline-item:last-child .timeline-content {
@@ -817,7 +817,7 @@ section {
 
   .timeline-content {
     padding-left: 1.5rem;
-    margin-left: -33px;
+    margin-left: -25px;
   }
 }
 
